--- a/style.css
+++ b/style.css
@@ -1,1 +1,81 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Lato", Arial, Helvetica, sans-serif;
+  background-color: rgb(246, 244, 210);
+  margin: 0;
+  /* primary: rgb(164, 74, 63); */
+  /* secondary: rgb(241, 156, 121); */
+}
+
+footer {
+  background-color: rgb(164, 74, 63);
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+
+nav {
+  background-color: rgb(164, 74, 63);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  padding: 0 20px;
+}
+nav .branding {
+}
+nav a {
+  margin-left: 15px;
+  color: white;
+  text-decoration: none;
+}
+
+#about {
+  height: 100vh;
+  background-image: url(./header-bg.jpg);
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  color: white;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#about::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: black;
+  opacity: 0.8;
+}
+
+#about * {
+  position: relative;
+  z-index: 5;
+  margin: 0;
+}
+
+#about h1 {
+  font-size: 60px;
+}
+#about p:first-of-type {
+  font-size: 30px;
+  margin-top: 20px;
+}
+#about p:last-child {
+  max-width: 700px;
+  margin-top: 20px;
+  line-height: 2rem;
+}
