--- a/style.css
+++ b/style.css
@@ -31,6 +31,25 @@ nav a {
   margin-left: 15px;
   color: white;
   text-decoration: none;
+  position: relative;
+}
+
+nav a::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  border-bottom: 3px solid white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(10px);
+  transition: transform 0.3s ease;
+  opacity: 0;
+}
+
+nav a:hover::after {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 #about {
@@ -103,6 +122,10 @@ nav a {
   max-width: 250;
   margin: 10px;
 }
+#project a:hover {
+  transform: scale(1.2);
+  color: red;
+}
 
 #contact {
   text-align: center;
@@ -113,9 +136,13 @@ nav a {
 #contact h2 {
   margin: 0;
 }
+#contact p {
+  margin: 0 0 20px;
+}
 
 #contact ul {
   margin: 0;
+  margin-top: 50px;
   padding: 0;
   list-style: none;
   display: flex;
@@ -126,6 +153,11 @@ nav a {
   font-size: 30px;
   text-decoration: none;
   padding: 10px;
+  border-radius: 50%;
+  border: solid 1px;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
 }
 
 footer {
