--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav {
   z-index: 100;
 }
 nav .branding {
+  /*  */
 }
 nav a {
   margin-left: 15px;
@@ -121,9 +122,11 @@ nav a:hover::after {
 #project .project {
   max-width: 250;
   margin: 10px;
+  transition: transform 0.3s ease;
+  text-decoration: none;
 }
-#project a:hover {
-  transform: scale(1.2);
+#project .project:hover {
+  transform: scale(1.1);
   color: red;
 }
 
