--- a/style.css
+++ b/style.css
@@ -124,10 +124,10 @@ nav a:hover::after {
   margin: 10px;
   transition: transform 0.3s ease;
   text-decoration: none;
+  color: black;
 }
 #project .project:hover {
   transform: scale(1.1);
-  color: red;
 }
 
 #contact {
