--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 nav {
-  background-color: grey(164, 74, 63, 0.9);
+  background-color: rgba(164, 74, 63, 0.9);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -28,7 +28,7 @@ nav {
   right: 0;
   z-index: 100;
 
-  box-shadow: 0 0 10px grey(0, 0, 0, 0.9);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
 nav a {
   margin-left: 15px;
@@ -110,7 +110,7 @@ nav a:hover::after {
   padding-top: 52px;
   padding-bottom: 20px;
   font-size: 45px;
-  text-shadow: 1px 1px 0 #e7eef1, 3px 3px 0px grey(0, 0, 0, 0.1);
+  text-shadow: 1px 1px 0 #e7eef1, 3px 3px 0px rgba(0, 0, 0, 0.1);
 }
 
 #project .project-container {
@@ -133,7 +133,7 @@ nav a:hover::after {
 #project .project:hover {
   filter: blur(0px);
   transform: scale(1.1);
-  box-shadow: 2px 2px 12px grey(0, 0, 0, 0.8), -2px -2px 12px grey(0, 0, 0, 0.8);
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.8), -2px -2px 12px rgba(0, 0, 0, 0.8);
 }
 #project .project {
   width: 250px;
@@ -143,7 +143,7 @@ nav a:hover::after {
   color: black;
   position: relative;
   flex-grow: 1;
-  box-shadow: 0 0 8px grey(0, 0, 0, 0.8);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
 }
 
 .project a {
@@ -151,7 +151,7 @@ nav a:hover::after {
   text-decoration: none;
 }
 a.link-to-github {
-  color: white;
+  color: rgb(246, 244, 210);
   position: absolute;
   top: 0;
   right: 0;
@@ -166,7 +166,9 @@ a.link-to-github {
 }
 
 a.link-to-github:hover {
-  background-color: grey;
+  background-color: rgb(246, 244, 210);
+  color: rgba(164, 74, 63, 0.9);
+  border: 0.5px solid rgba(164, 74, 63, 0.9);
 }
 
 #contact {
@@ -229,7 +231,7 @@ footer i {
   #project .project:hover {
     filter: none;
     transform: none;
-    box-shadow: 0 0 8px grey(0, 0, 0, 0.8);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
   }
   /* end remove blur effect */
 }
