--- a/style.css
+++ b/style.css
@@ -238,8 +238,8 @@ nav a:hover::after {
   color: black;
   text-decoration: none;
 }
-.link-to-github {
-  color: rgb(246, 244, 210);
+a.link-to-github {
+  color: var(--body-color);
   position: absolute;
   top: 0;
   right: 0;
@@ -254,7 +254,7 @@ nav a:hover::after {
 }
 
 .link-to-github:hover {
-  background-color: rgb(246, 244, 210);
+  background-color: var(--body-color);
   color: var(--primary-color);
   border: 0.5px solid var(--primary-color);
   box-shadow: -3px 10px 20px #000000cc;
